--- a/BoatEgo/BoatEgo.csproj
+++ b/BoatEgo/BoatEgo.csproj
@@ -76,5 +76,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\engine\engine.Common\engine.Common.csproj">
+      <Project>{a181b9f7-0422-4805-915e-573e13d07312}</Project>
+      <Name>engine.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\engine\engine.Winforms\engine.Winforms.csproj">
+      <Project>{c031d3fa-2ec9-423a-a04d-3b176c141577}</Project>
+      <Name>engine.Winforms</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
